manifests/userprofile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: userprofile
    namespace: api
spec:
    selector:
        matchLabels:
            app: userprofile
    replicas: 2
    template:
        metadata:
            labels: 
              app: userprofile
              namespace: api
        spec:
          containers: 
          - name: userprofile
            image: 'registry6y44587.azurecr.io/hacker2/userprofile:1.0'
            imagePullPolicy: Always
            ports: 
            - containerPort: 90
            volumeMounts:
              - name: test
                mountPath: /secrets
                readOnly: true
          volumes:
            - name: test
              flexVolume:
                  driver: "azure/kv"
                  secretRef:
                    name: kvcreds
                  options:
                    usepodidentity: "false"
                    keyvaultname: aksProd-kv
                    keyvaultobjectnames: "sql--password;sql--user"
                    keyvaultobjectaliases: "SQL_PASSWORD;SQL_USER" # Name of Key Vault secret
                    keyvaultobjecttypes: "secret;secret"
                    resourcegroup: teamResources
                    subscriptionid: 75159368-bf37-41f2-86ee-725899d35f50
                    tenantid: a24b3d45-7d4d-43b6-8310-d4574595ca1e
