manifests/poi.yaml
apiVersion: app/v1
kind: Service
metadata:
  name: poi
  namespace: api
spec:
  selector:
    app: tripviewer
  ports:
  - protocol: TCP
    port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi
  namespace: api
spec:
  selector:
      matchLabels:
        app: poi
  replicas: 2
  template:
      metadata:
        labels:
            app: poi
      spec:
        containers:
        - name: poi
          image: registry6y44587.azurecr.io/hacker2/poi:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
