manifests/trips.yaml
apiVersion: v1
kind: Service
metadata:
  name: trips
  namespace: api
spec:
  selector:
    app: trips
  ports:
  - protocol: TCP
    port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips
  namespace: api
spec:
  selector:
      matchLabels:
        app: trips
  replicas: 2
  template:
      metadata:
        labels:
            app: trips
      spec:
        containers:
        - name: trips
          image: registry6y44587.azurecr.io/hacker4/trips:1.0
          ports:
          - containerPort: 80
