manifests/tripviewer.yaml
apiVersion: v1
kind: Service
metadata:
  name: tripviewer
  namespace: web
spec:
  selector:
    app: tripviewer
  ports:
  - protocol: TCP
    port: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer
  namespace: web
spec:
  selector:
      matchLabels:
        app: tripviewer
  replicas: 2
  template:
      metadata:
        labels:
            app: tripviewer
      spec:
        containers:
        - name: tripviewer
          image: registry6y44587.azurecr.io/hacker3/tripviewer:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
